style: fix track alignment and change color of active marks

--- a/assets/index.less
+++ b/assets/index.less
@@ -36,12 +36,13 @@
     height: 4.5px;
     background-color: @primary-color;
     z-index: 1;
+    top: -1px;
   }
 
   &-handle {
     position: absolute;
     margin-left: -7px;
-    margin-top: -5px;
+    margin-top: -5.5px;
     width: 13px;
     height: 13px;
     cursor: pointer;
@@ -79,7 +80,7 @@
     color: #999;
 
     &-active {
-      color: #666;
+      color: #3E96DB;
     }
   }
 
